depositos updated y analisis

--- a/depositos.html
+++ b/depositos.html
@@ -42,6 +42,12 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
+            <a class="linkNoStyle" href="analisis.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText">Analisis</p>
+                </div>
+            </a>
             <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem">
                     <i class="fa-solid fa-circle-user"></i>
@@ -81,6 +87,12 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
+<a class="linkNoStyle" href="analisis.html">
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText biggerText">Analisis</p>
+                </div>
+            </a>
             <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
@@ -105,8 +117,62 @@
             </div>
             <div class="realContent">
                 <p class="indicadorPagina">Depositos</p>
-                
-                
+
+                <div>
+                    <div>parte izquierda</div>
+                    <div class="contenedorTabla">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Hora</th>
+                                    <th scope="col">Cambio</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                <div>
+                    <div>parte izquierda</div>
+                    <div class="contenedorTabla">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Hora</th>
+                                    <th scope="col">Cambio</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row" data-label="Hora">15:43hs</td>
+                                    <td data-label="Cambio">actualizada mascota ID</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
             </div>
         </div>
