--- a/mascotas.html
+++ b/mascotas.html
@@ -42,6 +42,12 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
+<a class="linkNoStyle" href="analisis.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText">Analisis</p>
+                </div>
+            </a>
             <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem">
                     <i class="fa-solid fa-circle-user"></i>
@@ -79,6 +85,12 @@
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-box-open"></i>
                     <p class="menuText biggerText">Depositos</p>
+                </div>
+            </a>
+<a class="linkNoStyle" href="analisis.html">
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="depositos.html">
