toast activados para check en mascotas

--- a/mascotas.html
+++ b/mascotas.html
@@ -167,9 +167,9 @@
                     </div>
 
 
-                    <button id="botonFiltrarMasco" class="butLog butLogSelect"">Filtrar</button>
+                    <button id="botonFiltrarMasco" class="butLog butLogSelect" onclick="myFunction()">Filtrar</button>
 
-                    <button id="botonAddMasco" class="butLog butLogSelect"">Agregar Mascota</button>
+                    <button id="botonAddMasco" class="butLog butLogSelect" onclick="myFunction2()">Agregar Mascota</button>
 
                 </div>
 
