toast updates analisis icon

--- a/depositos.html
+++ b/depositos.html
@@ -44,7 +44,8 @@
             </a>
             <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem">
-                    <i class="fa-solid fa-box-open"></i>
+                        <i class="fa-solid fa-chart-column"></i>
+
                     <p class="menuText">Analisis</p>
                 </div>
             </a>
@@ -89,7 +90,7 @@
             </a>
 <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem itemOnMobile">
-                    <i class="fa-solid fa-box-open"></i>
+                      <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
