--- a/personas.html
+++ b/personas.html
@@ -42,9 +42,9 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem">
-                    <i class="fa-solid fa-box-open"></i>
+                    <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText">Analisis</p>
                 </div>
             </a>
@@ -87,9 +87,9 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem itemOnMobile">
-                    <i class="fa-solid fa-box-open"></i>
+                    <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
@@ -140,7 +140,7 @@
                             <option>Rosario</option>
                         </select>
                     </div>
-                    
+
                     <button id="botonFiltrarPerso" class="botonEnSelect">Filtrar</button>
 
                     <button id="botonAddPerso" class="botonEnSelect">Agregar Persona</button>
