--- a/ajustes.html
+++ b/ajustes.html
@@ -42,10 +42,9 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem">
-                        <i class="fa-solid fa-chart-column"></i>
-
+                    <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText">Analisis</p>
                 </div>
             </a>
@@ -88,9 +87,9 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem itemOnMobile">
-                      <i class="fa-solid fa-chart-column"></i>
+                    <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
@@ -131,126 +130,129 @@
 
                 </div>
 
-                <div class="mainviewAjustes">
-                    <div class="ajustesCol1">
-                        <div class="imgAjustesConte">
-                            <img src="images/avatar3.png" class="imagenAvatarAjustes bps">
-                        </div>
-                        <div class="uploadWrapper">
-                            <label for="fileLoader">Cargar nueva imagen</label>
-                            <div id="fileLoader" class="file-upload">
-                                <input type="file" />
-                                <i class="fa fa-arrow-up"></i>
+                <div class=" mainviewAjustes">
+                        <div class="ajustesCol1">
+                            <div class="imgAjustesConte">
+                                <img src="images/avatar3.png" class="imagenAvatarAjustes bps">
+                            </div>
+                            <div class="uploadWrapper">
+                                <label for="fileLoader">Cargar nueva imagen</label>
+                                <div id="fileLoader" class="file-upload">
+                                    <input type="file" />
+                                    <i class="fa fa-arrow-up"></i>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="ajustesCol2">
-                        <input id="inputAjustesApellido" type="text" class="inputField spacer1" placeholder="Apellido">
-                        <input id="inputAjustesNombre" type="text" class="inputField spacer1" placeholder="Nombre">
-                        <input id="inputAjustesDate" type="text" class="inputField spacer1" placeholder="Fecha de Nacimiento (dd/mm/aaaa)">
-                        <input id="inputAjustesDNI" type="text" class="inputField spacer1" placeholder="DNI">
-                        <input id="inputAjustesPhone" type="text" class="inputField spacer1" placeholder="Telefono">
-                        <input id="inputAjustesEmail" type="email" class="inputField spacer1" placeholder="Email">
-                        <input id="inputAjustesPass" type="password" class="inputField spacer1" placeholder="Password">
-                    </div>
-                    <div class="ajustesCol3">
-                        
-
-                        <div class="contenedorTabla">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Hora</th>
-                                        <th scope="col">Cambio</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row" data-label="Hora">15:43hs</td>
-                                        <td data-label="Cambio">actualizada mascota ID</td>
-                                    </tr>
-         
-                                </tbody>
-                            </table>
+                        <div class="ajustesCol2">
+                            <input id="inputAjustesApellido" type="text" class="inputField spacer2"
+                                placeholder="Apellido">
+                            <input id="inputAjustesNombre" type="text" class="inputField spacer2" placeholder="Nombre">
+                            <input id="inputAjustesDate" type="text" class="inputField spacer2"
+                                placeholder="Fecha de Nacimiento (dd/mm/aaaa)">
+                            <input id="inputAjustesDNI" type="text" class="inputField spacer2" placeholder="DNI">
+                            <input id="inputAjustesPhone" type="text" class="inputField spacer2" placeholder="Telefono">
+                            <input id="inputAjustesEmail" type="email" class="inputField spacer2" placeholder="Email">
+                            <input id="inputAjustesPass" type="password" class="inputField spacer2"
+                                placeholder="Password">
                         </div>
+                        <div class="ajustesCol3">
 
-                    </div>
+
+                            <div class="contenedorTabla">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Hora</th>
+                                            <th scope="col">Cambio</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+                                        <tr>
+                                            <td scope="row" data-label="Hora">15:43hs</td>
+                                            <td data-label="Cambio">actualizada mascota ID</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </div>
                 </div>
 
 
