--- a/logged.html
+++ b/logged.html
@@ -42,9 +42,9 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem">
-                        <i class="fa-solid fa-chart-column"></i>
+                    <i class="fa-solid fa-chart-column"></i>
 
                     <p class="menuText">Analisis</p>
                 </div>
@@ -88,13 +88,13 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="analisis.html">
                 <div class="menuItem itemOnMobile">
-                      <i class="fa-solid fa-chart-column"></i>
+                    <i class="fa-solid fa-chart-column"></i>
                     <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText biggerText">Ajustes</p>
