--- a/refugios.html
+++ b/refugios.html
@@ -94,7 +94,7 @@
                     <p class="menuText biggerText">Analisis</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText biggerText">Ajustes</p>
