changes in persona page

--- a/personas.html
+++ b/personas.html
@@ -141,9 +141,9 @@
                         </select>
                     </div>
 
-                    <button id="botonFiltrarPerso" class="botonEnSelect">Filtrar</button>
-
-                    <button id="botonAddPerso" class="botonEnSelect">Agregar Persona</button>
+                    <button id="botonFiltrarMasco" class="butLog butLogSelect" onclick="myFunction()">Filtrar</button>
+                    <button id="botonAddMasco" class="butLog butLogSelect" onclick="myFunction2()">Agregar
+                        Persona</button>
 
                 </div>
 
